--- a/enrollment-roadmap.mkd
+++ b/enrollment-roadmap.mkd
@@ -1,7 +1,7 @@
 ---
 title: Device Enrollment in IETF protocols -- A Roadmap
 abbrev: device enrollment
-docname: draft-richardson-enrollment-roadmap-01
+docname: draft-richardson-enrollment-roadmap-02
 
 # stand_alone: true
 
@@ -111,14 +111,12 @@ The abstract semantics of the voucher, described in YANG, are in {{I-D.ietf-anim
 ## constrained voucher
 
 The semantics of the constrained voucher, represented in CBOR,
-are described in {{I-D.richardson-anima-ace-constrained-voucher}}.
-
-This document does NOT yet have a home.
+are described in {{I-D.ietf-anima-constrained-voucher}}.
 
 ## JSON format voucher
 
 The semantics of the basic voucher, represented in JSON,
-are described in {{I-D.ietf-anima-voucher}}.
+are described in {{RFC8366}}.
 
 ## COSE-8152
 
@@ -137,14 +135,14 @@ formed by {{I-D.selander-ace-cose-ecdhe}}.
 
 This document does NOT have a home.
 
-The CoAP-EST layer on top is described by {{I-D.vanderstok-ace-coap-est}}
+The CoAP-EST layer on top is described by {{I-D.ietf-ace-coap-est}}
 
 ## EST-COAPS 2/DTLS sec(urity)
 
 On unconstrained networks, the session key management is provided by {{RFC6347}}.
-The CoAP-EST layer on top is described by {{I-D.vanderstok-ace-coap-est}}.
+The CoAP-EST layer on top is described by {{I-D.ietf-ace-coap-est}}.
 
-The ACE WG has agreed to adopt this document.
+The ACE WG has adopted this document.
 
 ## EST-HTTPS TLS sec(urity)
 
@@ -271,9 +269,9 @@ that it uses DTLS (rather than TLS) and constrained (CBOR) vouchers.
 It is distinguished from 6tisch Zero Touch in that uses CMS to sign rather
 than COSE.
 
-The ACE WG is going to adopt {{I-D.vanderstok-ace-coap-est}}, but this is not
-a sufficient.  This work depends also depends upon a home for
-{{I-D.richardson-anima-ace-constrained-voucher}}.
+The ACE WG has adopted {{I-D.ietf-ace-coap-est}}, but this is not
+a sufficient.  This work depends depends upon
+{{I-D.ietf-anima-constrained-voucher}}.
 
 The use of this technology slice is attractive to IoT deployments where
 the devices are not battery powered (lighting for instance, AMI for electric
